mywork/force-app/main/default/objects/Scratch_Org_Info__c/Scratch_Org_Info__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Scratch Org Info</label>
</CustomObject>