mywork/force-app/main/default/objects/Scratch_Org_Info__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>Access Token.</description>
    <inlineHelpText>Access Token</inlineHelpText>
    <label>Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>