mywork/force-app/main/default/objects/Scratch_Org_Info__c/fields/Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>Instance_URL__c</fullName>
    <description></description>
    <label>Instance URL</label>
    <type>Text</type>
    <length>255</length>
</CustomField>