mywork/force-app/main/default/objects/Scratch_Org_Info__c/fields/Scratch_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Scratch_Org_Id__c</fullName>
    <description></description>
    <inlineHelpText></inlineHelpText>
    <label>Scratch Org Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>