mywork/force-app/main/default/objects/Scratch_Org_Info__c/fields/SFDX_Auth_URL__c.field-meta.xml
<CustomField>
    <fullName>SFDX_Auth_URL__c</fullName>
    <description></description>
    <inlineHelpText>SFDX AuthURL for the scratch org</inlineHelpText>
    <label>SFDX AuthURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>