mywork/force-app/main/default/objects/Scratch_Org_Info__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>Userid of user with access</description>
    <label>Userid of user with access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>