mywork/force-app/main/default/objects/Scratch_Org_Info__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>org username</description>
    <inlineHelpText>org username.</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>